move background image to body to ensure it always covers the page

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@ body,
 html,
 #root {
   height: 100%;
+  background-image: url('./background_photo_desktop.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 html {
@@ -29,11 +33,7 @@ h2 {
 .App {
   height: 100%;
   padding: 0 17% 10% 17%;
-  background-image: url('./background_photo_desktop.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  padding-bottom: 95.49%;
-  height: 0;
+
   font-family: 'Work Sans', sans-serif;
   font-weight: 500;
   color: #ffffff;
